css/program.css
/* html {
  width: 100%;
  background: linear-gradient(to bottom, #395054 0%, #00d3a9 100%) no-repeat !important;
}
.cover {
  width: 100%;
  height: 100%;
} */

.project-list-heading{
  position: relative;
  right: 1.9rem;
}

dd,b, dt {
  color: var(--color-secondary-dark);
}

a, li {
  overflow-wrap: break-word;
}

h1 {
  margin-top: 3.5rem;
  margin-bottom: 1rem;
  line-height: 3.75rem;
  font-size: 3rem;
  font-weight: 700;
  text-align: center;
  position:relative;
}
h2 {
  font-weight: 300;
  font-size: 2.1em;
  font-style: italic;
  color: var(--color-secondary-medium);
  position:relative;
}
h3 {
  font-weight: 300;
  font-size: 1.7em;
  color: var(--color-secondary-medium);
  position:relative;
}
h4 {
  font-weight: 400;
  font-size: 1.15em;
  margin-bottom: 0.5rem;
  padding-inline-start: 2rem;
  text-transform: uppercase;
  color: var(--color-secondary-dark);
  position:relative;
}
h1,h2,h3,h4,h5,h6{
  color: var(--color-secondary-dark);
}
.program {
  display: flex;
}
.project-details, .community-details {
  width: 50%;
}
.community-details ul {
  padding: 0px;
  margin: 0px;
}
.program ol {
  /* padding-inline-start: 3rem; */
  font-size: inherit;
  padding: 0px;
}

.sub_headings {
  border-bottom: 2px dashed #00d4ab;
  padding-bottom: 2px;
  width: fit-content;
  text-align: center;
  color: var(--color-secondary-dark);
}

.lfx-page {
  flex: 1 1 auto;
}

.toc {
  position: sticky;
  top: 10rem;
  flex: 0 0 250px;
  height: fit-content;
  width: 250px;
  padding: 1rem;
  background: var(--background-grey);
  box-shadow: var(--box-shadow-primary);
  border-radius: 7px;
}

.flex-container {
  display: flex;
  gap: 2rem;
  width: full-width;
  padding: 0 1.5rem;
}

.toc-title {
  font-size: 1rem;
  font-weight: 600;
  margin-bottom: 0.5rem;
  color: var(--color-secondary-dark);
}

.toc ul {
  list-style-type: none;
  padding-left: 1rem;
}

.toc ul li {
  margin-bottom: 0.5rem;
} 

.toc ul li a {
  color: var(--color-secondary-dark);
  text-decoration: none;
}

.title {
  text-align: center;
  color: #ffffff;
}

.cover .title{
  padding: 1rem 0 2rem 0;
}

.image-div {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  width: 100%;
  max-width: 400px;
}

.card-content {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 5px;
}

.heading {
  text-align: center;
  font-weight: bolder;
  font-size: x-large;
  text-decoration: underline;
  text-decoration-color: #00d4ab;
}

.project-item {
  margin-bottom: 1.5rem;
}

.project-list {
  font-size: medium;
  padding-left: 2rem;
  margin-top: 1rem;
  margin-bottom: 1.1rem;
}


.program-p {
  margin-top: 0;
  margin-bottom: 0;
  padding-left: 2rem;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

a:active {
  text-decoration: none;
}

.appear {
  display: none;
}

.participate-button {
  background-color: #00B39F;
  width: auto;
  border-radius: 0.5rem;

  padding-top: 0.7rem;
  padding-bottom: 2rem;
  padding-left: 1rem;
  padding-right: 1rem;

  color: #fff;
  cursor: pointer;

  border: none;
  outline: none;
  text-decoration: none;
}

.participate-button:active {
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

.participate-button:hover {
  background-color: #00d3a9;
}

#button-scroll-to-up {
  display: inline-block;
  background-color: var(--brand-color-secondary);
  width: 55.5px;
  height: 55.5px;
  text-align: center;
  border-radius: 50%;
  position: fixed;
  bottom:-60px;
  right: 30px;
  z-index: 99999;
  cursor: pointer;
  transition: bottom 0.2s;
}
#button-scroll-to-up::after {
  border-style: solid;
	border-width: 0.25em 0.25em 0 0;
	content: '';
	display: inline-block;
	height: 0.7em;
	position: relative;
  top: 1.4em;
	transform: rotate(-45deg);
	vertical-align: center;
	width: 0.7em;
  color: #fff;
}
#button-scroll-to-up.show {
  bottom: 20px;
}

.subhead {
  font-size: 1rem;
  padding-left: 2rem;
  padding-bottom: 1.2rem;
}

.small-li li {
  font-size: 0.9rem;
}

.program-heading{
  margin-top: 5rem;
  padding-top: 5rem;
  padding-bottom: 5rem;
  background-color:#3c494f;
  text-align: center;
  color: white;
}

.card-div {
  padding:0px 10vw;
  display: flex;
  background-color: #3c494f;
  gap: 2rem 6rem;
  flex-wrap: wrap;
  padding-top: 3rem;
  justify-content: space-around;
}

#program-card-img {
  width: 10%;
  height: inherit;
  vertical-align: middle;
  position: relative;
  z-index: -1;
}

.card-img {
  width:15rem;
  object-fit: contain;
  user-select: none;
  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;
}

img {
  user-select: none;
  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;
}

.card {
  width: 100%;
  padding-top: 2rem;
  margin: 2rem 0px;
  text-align: center;
  background-color: #395054;
  border: 2px solid #395054;
  border-radius: 5px;
  border: 0;
  user-select: none;
  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;
  color: whitesmoke;
}

.card:hover {
  transition: 0.25s ease-out;
  box-shadow: 0 7px 7px 1px rgba(0, 0, 0, 0.14),
    0 3px 6px 2px rgba(0, 0, 0, 0.12), 0 4px 4px -3px rgba(0, 0, 0, 0.3);
  -webkit-box-shadow: 0 7px 7px 1px rgba(0, 0, 0, 0.14),
    0 3px 6px 2px rgba(0, 0, 0, 0.12), 0 4px 4px -3px rgba(0, 0, 0, 0.3);
}

.cncf-firstrow {
  max-width: 1400px;
  border: 2px solid #00d4ab;
  border-radius: 20px;
  margin: auto;
  background:var(--color-primary-light) !important;
  width: 90%;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 3rem;
  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
  grid-gap: 1rem;
}

.cncf-firstrow-span1 {
  width: 70%;
}

.cncf-firstrow-span2 {
  width: 30%;
}

.cncf-secondrow {
  display: flex;
  margin-top: 4rem;
  margin-left: 1rem;
}

#cncf-meshery-img {
  width: 80%;
  padding-right: 1rem;
  padding-top: 5rem;
}


#cncf-large-img {
  width: 80%;
  max-width: 1400px;
  margin: 20px auto;
  display: block;
  padding-left: 2.5rem;
}

#cncf-logo {
  width: 50%;
  padding-left: 5rem;
}

.issue {
  display: block;
  width :90%;
  padding-left: 2rem;
  padding-right: 2rem;
  font-size: small;
  word-break: break-all;
}

.text-container {
    max-width: 1200px;
}

@media screen and (max-width: 767px) {
  p{
    padding-left: 0.4rem;
  }
  .project-list-heading{
    right: .4rem;
  }
  .dd-content{
    padding-top: .6rem;
    position: relative;
    right: 1.9rem;
  }

  .card-content {
    margin-left: 0;
  }

  .community-details {
    border-left: none;
  }


  .cover .title{
    text-align: center;
  }


  .program {
    border-radius: 20px;
    /* margin: auto; */
    word-wrap: normal;
    width: 100%;
    padding: 1rem 0rem;
    justify-content: center;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .project-list {
    padding-left: 0.5rem;
  }

  .issue {
    padding-left: 0.4rem;
  }

  .title {
    text-align: left;
    color: #ffffff;
    font-size: 1.2rem;
    padding-left: 0.6rem;
  }

  .cncf-firstrow {
    max-width: 1400px;
    border: 2px solid #00d4ab;
    border-radius: 20px;
    margin: auto;
    background-color: #ffffff;
    width: 100%;
    padding-left: 0px;
    padding-right: 0px;
    padding-top: 1rem;
  }

  .cncf-firstrow-span1 {
    width: 100%;
  }

  .cncf-firstrow-span2 {
    width: 100%;
    align-items: center;
    padding: 10px;
  }

  #cncf-large-img {
    width: 90%;
    padding-left: 0;
    margin: 15px auto;
  }

  #cncf-logo {
    max-width: 150px;
  }

  .cncf-secondrow {
    display: block;
    margin-top: 2rem;
    margin-left: 1rem;
  }

  #cncf-participate-btn {
    width: 50%;
  }

  #cncf-meshery-img {
    padding-left: 2.5rem;
    padding-top: 0;
  }

  .card-div {
    display: flex;
    flex-wrap: wrap;
    /* padding-top: 10rem; */
    justify-content: center;
  }

  .card-img {
    width: 80%;
    height: 50%;
  }
  .card {
    width: 40%;
    padding-top: 2rem;
  }
  .disappear {
    display: none;
  }
  .appear {
    display: block;
  }
}

@media screen and (max-width: 1200px) {
  .card-img {
    width:12.5rem;
  }
  #cncf-meshery-img {
    padding-left: 3rem;
  }

}


@media screen and (max-width: 1100px) {
  .card-div{
    gap: 2rem 4rem;
  }
  .card-img {
    width:10rem;
  }

}


@media screen and (max-width: 640px) {
  .card-img {
    width:7.5rem;
  }
  .card-div{
    gap: 2rem 0rem;
  }

  .card {
    width: 40%;
    padding-top: 2rem;
    margin-left: 1rem;
    margin-right: 1rem;
  }
  .cover{
    padding: 25px 25px;
  }
  .program ol, .program ul{
    padding: 0px;
   }
  .program__subscribe {
    padding: 25px;
    margin: 0;
  }
   }
  .project-details, .community-details {
    width: 100%;
  }

@media screen and (max-width: 480px) {
  #cncf-large-img {
    width: 95%;
    max-width: 300px;
  }

  #cncf-logo {
    max-width: 120px;
  }

  #cncf-meshery-img {
    max-width: 200px;
  }
}

